codex-rs/tui-integration-tests/tests/snapshots/startup__startup_shows_welcome.snap
---
source: tui-integration-tests/tests/startup.rs
assertion_line: 52
expression: normalize_for_snapshot(session.screen_contents())
---
                                      
             _._:=++==+,_             
         _=,/*\+/+\=||=_ _"+_         
       ,|*|+**"^`   `"*`"~=~||+       
      ;*_\*',,_            /*|;|,     
     \^;/'^|\`\\            ".|\\,    
    ~* +`  |*/;||,           '.\||,   
   +^"-*    '\|*/"|_          ! |/|   
   ||_|`     ,//|;|*            "`|   
   |=~'`    ;||^\|".~++++++_+, =" |   
    _~;*  _;+` /* |"|___.:,,,|/,/,|   
    \^_"^ ^\,./`   `^*''* ^*"/,;_/    
     *^, ", `              ,'/*_|     
       ^\,`\+_          _=_+|_+"      
         ^*,\_!*+:;=;;.=*+_,|*        
           `*"*|~~___,_;+*"           
                                      

  Welcome to Codex, OpenAI's command-line coding agent

> You are running Codex in [TMP_DIR]

  Since this folder is not version controlled, we recommend requiring approval
  of all edits and commands.
