codex-rs/tui-integration-tests/tests/snapshots/startup__trust_screen_skipped.snap
---
source: tui-integration-tests/tests/startup.rs
assertion_line: 135
expression: normalize_for_snapshot(session.screen_contents())
---
› [DEFAULT_PROMPT]

  100% context left · ? for shortcuts
